2006-12-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Updating documentation of [get|set|clear]_item_flag intrinsics.
	* Fixed bug #1608149.

2006-12-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing Keyring bugs in forging code/Menion's training.

2006-11-30  Marzo Sette Torres Junior <marzojr@yahoo.com>
	When editing shape info, have origin be updated when the frame is changed.

2006-11-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Updating Keyring mod to incorporate some additions to UCC, as well as a new
	  sprite and gump for Mariah and several bugfixes.

2006-11-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapeid.*, actors.cc: 'paralyze' flag now displays a purple outline. For
	  the sake of visibility, the SI color was used instead of the BG one.
	* exult.*, usecode/conversation.cc, usecode/ucinternal.cc: Rotate palette
	  colors during conversations and during book mode (U7 verified -- e.g., the
	  SI phoenix).
	* usecode/bgintrinsics.h: Imported five intrinsics from SI to BG:
	  show_npc_face0, show_npc_face1, remove_npc_face0, remove_npc_face1 and
	  set_conversation_slot.
	* usecode/siintrinsics.h: Imported three intrinsics from BG to SI:
	  center_view, lightning and stop_time.
	* docs/exult_intrinsics.txt: Included above modifications.

2006-11-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed Karnax freeze-up bug.

2006-11-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* UCC: Adding assignment operators ('+=', '-=', '*=', '/=', '%='); improved
	  the functionality of '<<'; allowing getting/setting global flags with
	  non-constant expressions; allowing non-constant values in 'actor frame'
	  script command; fixed crash on code like 'var test = fun();' with 'fun'
	  undeclared; some misc improvements.
	* Exult: Added two new opcodes that allow getting/setting flags using a
	  value on the stack.

2006-11-23  Marzo Sette Torres Junior <marzojr@yahoo.com>