@@ -3195,3 +3195,36 @@ USECODE_INTRINSIC(get_map_num)
 	return Usecode_value(obj->get_map_num());
 }
 
+USECODE_INTRINSIC(is_dest_reachable)
+{
+	Usecode_value ret(0);
+	Actor *npc = as_actor(get_item(parms[0]));
+	if (!npc)
+		return ret;
+	Tile_coord dest;
+	if (parms[1].is_ptr())
+		{
+		Game_object *obj = get_item(parms[1]);
+		dest = obj->get_tile();
+		}
+	else
+		{
+		Usecode_value& arr = parms[1];
+		int sz = arr.get_array_size();
+		if (sz < 2)
+			return ret;
+		dest = Tile_coord(arr.get_elem(0).get_int_value(),
+			  arr.get_elem(1).get_int_value(),
+			  sz >= 3 ? arr.get_elem(2).get_int_value() : 0);
+		}
+	
+	Path_walking_actor_action *action = 
+		new Path_walking_actor_action(0, 6);
+	
+	if (action->walk_to_tile(npc, npc->get_tile(), dest))
+		ret = Usecode_value(1);
+	
+	delete action;
+	return ret;
+}
+
