@@ -1,3 +1,6 @@
+2006-12-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	Adding new 'is_dest_reachable' intrinsic and documentation for it.
+
 2006-12-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Updating documentation of [get|set|clear]_item_flag intrinsics.
 	* Fixed bug #1608149.
